--- a/java-project/pom.xml
+++ b/java-project/pom.xml
@@ -31,6 +31,11 @@
       <version>1.18.8</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.javatuples</groupId>
+      <artifactId>javatuples</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
