--- a/java-project/pom.xml
+++ b/java-project/pom.xml
@@ -46,6 +46,11 @@
       <artifactId>opencsv</artifactId>
       <version>4.0</version>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.16</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
