--- a/java-project/pom.xml
+++ b/java-project/pom.xml
@@ -51,6 +51,34 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.16</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.derby/derby -->
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <version>10.15.1.3</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.eu.acolyte/jdbc-driver -->
+    <dependency>
+      <groupId>org.eu.acolyte</groupId>
+      <artifactId>jdbc-driver</artifactId>
+      <version>1.0.51</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+    <dependency>
+      <groupId>com.microsoft.sqlserver</groupId>
+      <artifactId>mssql-jdbc</artifactId>
+      <version>7.3.1.jre12-preview</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
+    <!-- <dependency>
+      <groupId>com.oracle</groupId>
+      <artifactId>ojdbc14</artifactId>
+      <version>10.2.0.4.0</version>
+    </dependency> -->
+    
+    
   </dependencies>
   <build>
     <plugins>
